alignment issues

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,6 +15,7 @@ body {
     font-family: var(--ff);
     font-size: var(--fs);
     background-color: var(--lightgray);
+    width: 100vw;
 }
 
 h1 {
@@ -34,8 +35,9 @@ span {
 
 .main {
     display: grid;
-    place-items: center;
-    margin: 25px;
+    justify-items: center;
+    width: 300px;
+    margin: auto;
 }
 
 /* .join styles */
